[gd_scene load_steps=5 format=3 uid="uid://d0ctw8crlagm3"]

[ext_resource type="Script" path="res://Game/Characters/Enemy.gd" id="1_f81ff"]
[ext_resource type="Texture2D" uid="uid://bif4mrx81pnne" path="res://Game/enemy_i_guess.png" id="2_y10ie"]
[ext_resource type="PackedScene" uid="uid://b3kkvxuchiw3k" path="res://Shadow.tscn" id="3_uqu11"]

[sub_resource type="BoxShape3D" id="BoxShape3D_726gy"]
size = Vector3(0.8, 0.8, 0.8)

[node name="Enemy" type="CharacterBody3D" groups=["Entity"]]
collision_layer = 128
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
script = ExtResource("1_f81ff")

[node name="CollisionShape3d" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, 0)
shape = SubResource("BoxShape3D_726gy")

[node name="ForwardRaycast" type="Node3D" parent="."]
metadata/_edit_lock_ = true

[node name="Head" type="RayCast3D" parent="ForwardRaycast"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
target_position = Vector3(0, 0, -0.6)
debug_shape_thickness = 5

[node name="Feet" type="RayCast3D" parent="ForwardRaycast"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0)
target_position = Vector3(0, 0, -0.6)
debug_shape_thickness = 5

[node name="Side" type="RayCast3D" parent="ForwardRaycast"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.3, 0.5, 0)
target_position = Vector3(0, 0, -0.6)
debug_shape_thickness = 5

[node name="Other" type="RayCast3D" parent="ForwardRaycast"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.3, 0.5, 0)
target_position = Vector3(0, 0, -0.6)
debug_shape_thickness = 5

[node name="BackwardRaycast" type="Node3D" parent="."]
metadata/_edit_lock_ = true

[node name="Head" type="RayCast3D" parent="BackwardRaycast"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
target_position = Vector3(0, 0, 0.6)
debug_shape_thickness = 5

[node name="Feet" type="RayCast3D" parent="BackwardRaycast"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0)
target_position = Vector3(0, 0, 0.6)
debug_shape_thickness = 5

[node name="Side" type="RayCast3D" parent="BackwardRaycast"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.3, 0.5, 0)
target_position = Vector3(0, 0, 0.6)
debug_shape_thickness = 5

[node name="Other" type="RayCast3D" parent="BackwardRaycast"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.3, 0.5, 0)
target_position = Vector3(0, 0, 0.6)
debug_shape_thickness = 5

[node name="Visual" type="Node3D" parent="."]

[node name="Sprite3d" type="Sprite3D" parent="Visual"]
offset = Vector2(0, 96)
pixel_size = 0.0078
texture = ExtResource("2_y10ie")

[node name="RayCast3d" parent="Visual/Sprite3d" instance=ExtResource("3_uqu11")]
